fix too short width of menu buttons on the left

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1017,7 +1017,6 @@ text {
 /*END OF STEPSBAR */
 
 .btn-group{
-	margin-left:10px;
     margin-bottom:35px;
 }
 .btn-group.filter_menu {
